styles: fix the border-radius corners on mobile

--- a/styles.css
+++ b/styles.css
@@ -76,16 +76,14 @@ h6 {
 .card_image,
 .card_image img {
   border-top-left-radius: 10px;
- border-bottom-left-radius: 10px;
-
+  border-top-right-radius: 10px;
 }
 
 .card_content {
   background-color: var(--white);
   padding: 1rem;
-  border-bottom-left-radius:10px;  
-  border-bottom-right-radius: ;
-
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
 .card-subtitle {
@@ -166,9 +164,8 @@ h6 {
 
 
   .card_image picture {
-    height: 100%;
     border-top-right-radius: 10px;
-border-bottom-right-radius: 10px;
+    border-bottom-right-radius: 10px;
   }
 
   .card_image picture>img {
@@ -179,7 +176,7 @@ border-bottom-right-radius: 10px;
   .card_content {
     padding: 1.5rem;
     border-bottom-left-radius: 0;
-    border-bottom-right-radius:10px;
-    border-top-right-radius:10px;
+    border-bottom-right-radius: 10px;
+    border-top-right-radius: 10px;
   }
 }
